# ChangeLog for media-sound/xmms
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/Attic/ChangeLog,v 1.56 2003/07/18 08:46:47 seemant Exp $

*xmms-1.2.7-r23 (18 Jul 2003)

  18 Jul 2003; Seemant Kulleen <seemant@gentoo.org> xmms-1.2.7-r23.ebuild,
  files/xmms-fhs-skinsdir.patch, files/xmms-gettext-fix.patch:
  fix for gettext-0.12 and nls in USE, closing bug #24472 by: Lisa Marie
  <lisa@gentoo.org>. Note that the fix for that was provided by Paul
  DeVrieze <pauldv@gentoo.org> based on the work by Alvari Figueroa
  <fede2@fuerzag.ulatina.ac.cr>  Also, added /usr/local/share/xmms/Skins to the
  search path for skins -- local sysadmins should create that directory and
  add systemwide skins to there 

*xmms-1.2.7-r22 (27 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

  04 Jul 2003; jje <jje@gentoo.org> xmms-1.2.7-r20.ebuild:
  Make the russian and japanese patches exclusive.

  27 Jun 2003; robh <robh@gentoo.org> xmms-1.2.7-r22.ebuild:
  Fixed russian cjk patch overlap. Fixes bug #23535. Thanks to jje :)

  26 June 2003; <robh@gentoo.org> xmms-1.2.7-r22.ebuild:
  Added support for Russian Charset. Thanks to Sergey Kuleshov. Closes #22194

  26 May 2003; jje <jje@gentoo.org> xmms-1.2.7-r21.ebuild:
  Removing previous revision, patch needs more work - it breaks things.

  17 May 2003; jje <jje@gentoo.org> xmms-1.2.7-r21.ebuild,
  files/xmms-1.2.7-songpos.patch:
  Added song position patch for sid files.
  
  Submitted by: Christoph Richter <toph@abi2ooo.org>

*xmms-1.2.7-r21 (17 May 2003)

  17 Jun 2003; Guy Martin <gmsoft@gentoo.org> xmms-1.2.7-r21.ebuild :
  Readded xmms-1.2.7-r21 from xmms-1.2.7-r20 but with ipv6 support for
  non x86 arch. Fix #21830.

  17 May 2003; jje <jje@gentoo.org> xmms-1.2.7-r21.ebuild:
  Fix for people booting with gentoo=nodevfs - conditional setup defaults.
  
  Submitted by: Jacob <waif@kefka.org>
