@@ -1,8 +1,8 @@
 MD5 5618f4d14fd98b813b7be2b4df0087e7 xmms-1.2.7-r21.ebuild 4830
-MD5 60fe60be44cac79ab1b9b6d4c4b154d8 xmms-1.2.7-r23.ebuild 5179
+MD5 724c950dee3937ad9bc43ca57d2c8e9c xmms-1.2.7-r23.ebuild 5235
 MD5 9babb98a35c1c40729cdede9bd3588a3 xmms-1.2.7-r20.ebuild 4960
 MD5 90740c69a0e1cdd3a65b037af5fe8a5a xmms-1.2.7-r22.ebuild 4989
-MD5 015c1a2e480c3ba66d81fcaf4feb6026 ChangeLog 10648
+MD5 1df9e91299ad870c4d5437f37a541099 ChangeLog 10793
 MD5 e7e0c91780b115aaad1a1ed534bf7ae8 files/xmms-ipv6-20020408-mmx.patch 9210
 MD5 7ab233f0953be4760d3e5b784cc0bba4 files/xmms-fhs-skinsdir.patch 372
 MD5 3268d7f38e954fd7ab541fa9e6f385ca files/digest-xmms-1.2.7-r20 130
